--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "trg",
   "version": "0.1.0",
+  "homepage": "https://sarthak-karki.github.io/TRG",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -20,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +45,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.17",
     "tailwindcss": "^3.1.8"
   }
