Update dependencies, refactor imports, and configure path aliases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,11 @@
     "allowJs": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": "src",
+    "paths": {
+      "@app/*": ["*"]
+    }
   },
   "include": [
     "src"
