--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "homepage": "https://sarthak-karki.github.io/TRG",
   "private": true,
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-slot": "^1.2.3",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.552.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.5",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.9.3",
     "web-vitals": "^5.1.0"
   },
