--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,8 @@ jobs:
         run: npm run build
         env:
           CI: false # Treats warnings as warnings, not errors
+          VITE_GA_MEASUREMENT_ID: ${{ secrets.GA_MEASUREMENT_ID }}
+          VITE_APP_ENV: production
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
