--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "lucide-react": "^0.552.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-ga4": "^2.1.0",
     "react-router-dom": "^7.9.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.9.3",
-    "web-vitals": "^5.1.0"
+    "typescript": "^5.9.3"
   },
   "scripts": {
     "dev": "vite",
