--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "preview": "vite preview"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.14",
