--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,13 +9,13 @@
       "type": "image/x-icon"
     },
     {
-      "src": "trgLogo.jpeg",
-      "type": "image/jpeg",
+      "src": "favicon.ico",
+      "type": "image/x-icon",
       "sizes": "192x192"
     },
     {
-      "src": "trgLogo.jpeg",
-      "type": "image/jpeg",
+      "src": "favicon.ico",
+      "type": "image/x-icon",
       "sizes": "512x512"
     }
   ],
